--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "source": "src/index.html",
   "scripts": {
     "start": "parcel",
-    "build": "parcel build"  
+    "build": "parcel build"
   },
   "repository": {
     "type": "git",
@@ -18,7 +18,8 @@
   },
   "homepage": "https://github.com/nnuytta/onl29_js_diploma#readme",
   "devDependencies": {
+    "@parcel/transformer-sass": "^2.6.2",
     "parcel": "^2.6.2",
-    "@parcel/transformer-sass": "^2.6.2"
+    "parcel-plugin-static-files-copy": "^2.6.0"
   }
 }
